# whisper-api

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
examples/: record.py  transcribe.py
src/: main.py
